# apokatastasis

./: .gitignore  README.md
docs/: index.md
journal/: apok.yaml  build.py  config.py  devserver.py  macc.yaml  manage.py  pyproject.toml  watch.py
journal/content/: index.md
journal/content/volume_001/issue_01/article_1/: index.md
journal/static/: main.css
journal/templates/: article-jats.jinja  article-jats.xml  article.html  article.jinja  base.html  base.jinja  index.html  typst-template.txt
journal/templates/partials/: breadcrumbs.jinja
journal/typings/frontmatter/: __init__.pyi  conftest.pyi  default_handlers.pyi  util.pyi
